Made updates to navbar and created option bar with rudimentary selectors

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -59,7 +59,7 @@
 .navbar {
     min-height: 10px;
     margin-bottom: 0;
-    background-color: #232F3E;
+    background-color: #333333;
     border-radius: 0;
 }
 
