--- a/src/components/optionbar/optionbar.css
+++ b/src/components/optionbar/optionbar.css
@@ -9,7 +9,7 @@
 .optionbar-title {
   display: inline-block;
   padding-left: 20px;
-  padding-top: 8px;
+  padding-top: 4px;
 }
 
 .optionbar-title .sprite{
@@ -17,14 +17,18 @@
 }
 
 .optionbar-title h3{
-  display:inline-block;
-  padding-left:10px;
+  color: #333;
+  display: inline-block;
+  font-weight: 500;
+  padding-left:5px;
   padding-top: 4px;
   vertical-align:top;
 }
 
 #optionbar-selects {
+  color: #333;
   display:inline-block;
+  font-size: 1.3em;
   width:90%;
   min-height:34px;
   right:60px;
@@ -36,6 +40,11 @@
   display:inline-block;
   padding-left:10px;
 }
+
+#optionbar-selects .pull-right{
+  padding-top: 5px;
+}
+
 #optionbar-selects .current-option{
   padding-right:4px;
 }
@@ -57,6 +66,12 @@
 
 .btn-group {
     vertical-align: inherit;
+}
+
+.customSelect select{
+  background: transparent;
+  background-color: rgba(225, 225, 225, 0.092);
+  color: rgb(154, 154, 154);
 }
 
 @media screen and (max-width: 550px) {
