Made updates to navbar/optionbar

--- a/src/components/optionbar/optionbar.tpl.html
+++ b/src/components/optionbar/optionbar.tpl.html
@@ -1,6 +1,6 @@
 <div id="optionbar-container" data-ng-show="optionbar.pageData.optionBar.show">
     <div class="optionbar-title" >
-      <div class="sprite" data-ng-class="optionbar.pageData.icon"></div><h3 data-ng-cloak>{{optionbar.pageData.title}}</h3>
+      <div class="sprite" data-ng-class="optionbar.pageData.icon"></div><h3 data-ng-cloak>Crews</h3>
     </div>
 
     <div id="optionbar-selects" class="pull-right">
