--- a/src/components/optionbar/optionbar.css
+++ b/src/components/optionbar/optionbar.css
@@ -18,7 +18,7 @@
 
 .optionbar-title h3{
   color: #333;
-  display: inline-block;
+  display:inline-block;
   font-weight: 500;
   padding-left:5px;
   padding-top: 4px;
@@ -26,12 +26,13 @@
 }
 
 #optionbar-selects {
+  bottom: 3px;
   color: #333;
   display:inline-block;
   font-size: 1.3em;
   width:90%;
   min-height:34px;
-  right:60px;
+  right:30px;
   padding-top:3px;
   position: absolute;
 }
@@ -40,11 +41,6 @@
   display:inline-block;
   padding-left:10px;
 }
-
-#optionbar-selects .pull-right{
-  padding-top: 5px;
-}
-
 #optionbar-selects .current-option{
   padding-right:4px;
 }
@@ -66,12 +62,6 @@
 
 .btn-group {
     vertical-align: inherit;
-}
-
-.customSelect select{
-  background: transparent;
-  background-color: rgba(225, 225, 225, 0.092);
-  color: rgb(154, 154, 154);
 }
 
 @media screen and (max-width: 550px) {
