--- a/src/components/optionbar/optionbar.tpl.html
+++ b/src/components/optionbar/optionbar.tpl.html
@@ -1,9 +1,10 @@
 <div id="optionbar-container" data-ng-show="optionbar.pageData.optionBar.show">
     <div class="optionbar-title" >
-      <div class="sprite" data-ng-class="optionbar.pageData.icon"></div><h3 data-ng-cloak>Crews</h3>
+      <h3 data-ng-cloak>{{optionbar.pageData.title}}</h3>
     </div>
 
     <div id="optionbar-selects" class="pull-right">
+
       <div id="viewdropdown" class="optionbar-dropdown pull-right" data-ng-show="optionbar.pageData.optionBar.viewShow">
         <div class="btn-group dropdown" uib-dropdown >
           <button type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
@@ -14,16 +15,7 @@
           </ul>
         </div>
       </div>
-      <div id="timedropdown" class="optionbar-dropdown pull-right" data-ng-show="optionbar.pageData.optionBar.timeShow">
-        <div class="btn-group dropdown" uib-dropdown >
-          <button type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
-            <span class="current-option pull-left">{{optionbar.pageData.optionBar.timeCurrent.name}}</span> <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-            <li role="menuitem" data-ng-repeat="tchoice in optionbar.pageData.optionBar.timeChoices" ><a ng-click="optionbar.changeTime(tchoice)">{{tchoice.name}}</a></li>
-          </ul>
-        </div>
-      </div>
+
       <div id="metricdropdown" class="optionbar-dropdown pull-right" data-ng-show="optionbar.pageData.optionBar.metricShow">
         <div class="btn-group dropdown" uib-dropdown >
           <button type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
@@ -34,15 +26,28 @@
           </ul>
         </div>
       </div>
-      <div id="opsdropdown" class="optionbar-dropdown pull-right" data-ng-show="optionbar.pageData.optionBar.opsShow">
+
+      <div id="aggdropdown" class="optionbar-dropdown pull-right" data-ng-show="optionbar.pageData.optionBar.aggShow">
         <div class="btn-group dropdown" uib-dropdown >
           <button type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
-            <span class="current-option pull-left">{{optionbar.pageData.optionBar.opsCurrent.name}}</span> <span class="caret"></span>
+            <span class="current-option pull-left">{{optionbar.pageData.optionBar.aggCurrent.name}}</span> <span class="caret"></span>
           </button>
           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-            <li role="menuitem" data-ng-repeat="choice in optionbar.pageData.optionBar.opsChoices" ><a ng-click="optionbar.changeOps(choice)">{{choice.name}}</a></li>
+            <li role="menuitem" data-ng-repeat="choice in optionbar.pageData.optionBar.aggChoices" ><a ng-click="optionbar.changeAgg(choice)">{{choice.name}}</a></li>
           </ul>
         </div>
       </div>
+
+      <div id="timedropdown" class="optionbar-dropdown pull-right" data-ng-show="optionbar.pageData.optionBar.timeShow">
+        <div class="btn-group dropdown" uib-dropdown >
+          <button type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+            <span class="current-option pull-left">{{optionbar.pageData.optionBar.timeCurrent.name}}</span> <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+            <li role="menuitem" data-ng-repeat="tchoice in optionbar.pageData.optionBar.timeChoices" ><a ng-click="optionbar.changeTime(tchoice)">{{tchoice.name}}</a></li>
+          </ul>
+        </div>
+      </div>
+      
     </div>
 </div>
